--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "zenMode.hideTabs": false,
     "markdown.preview.typographer": true,
     "markdown.styles": [
-        "style.css"
+        "slides/style.css"
     ],
     "markdown.preview.scrollPreviewWithEditor": false,
     "markdown.preview.scrollEditorWithPreview": false,
